packages/svelte/tests/compiler-errors/samples/css-global-block-combinator-2/main.svelte
<style>
	/* ok */
	.x :global.x p {
	}
	.x :global > p {
	}

	/* not ok */
	.x > :global p {
	}
</style>
